fix word-wrapping issues

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -109,7 +109,7 @@ html, body {
                 }
                 span {
                     font-weight: bold;
-                    white-space: pre;
+                    white-space: pre-line;
                 }
                 h3 {
                     font-size: 135%;
